--- a/todoapp/styles.css
+++ b/todoapp/styles.css
@@ -8,6 +8,7 @@ body{
     font-family: "Mona Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
     background-color: black;
     color: #fff;
+    max-width: 100vw;
     
     
 }
@@ -66,31 +67,52 @@ body{
     display: flex;
     justify-content: space-around;
     padding-top: 80px;
-    margin: auto;
+    /* margin: 0 10px; */
+    padding-left: 98px;
+    margin-right: -138px;
+
 }
 .water p{
-    margin-left: -130px;
+    margin-left: -413px;
     padding-top: 5px;
+    font-size: 25px;
 }
+
 .walk{
     display: flex;
     justify-content: space-around;
     padding-top: 80px;
-    margin: auto;
+    padding-left: 98px;
+    margin-right: -138px;
 }
 
 .walk p{
-    margin-left: -130px;
+    margin-left: -413px;
     padding-top: 5px;
+    font-size: 25px;
 }
 .email{
     display: flex;
     justify-content: space-around;
     padding-top: 80px;
-    margin: auto;
+    /*margin: auto;*/
+    padding-left: 98px;
+    margin-right: -138px;
 }
 
 .email p{
-    margin-left: -130px;
+    margin-left: -413px;
     padding-top: 5px;
+    font-size: 25px;
+}
+.circle{
+    color: #3B9464;
+    line-height: 1.5;
+    font-size: 30px;
+}
+.delete{
+    color: #D64646;
+}
+span{
+    font-size: 21px;
 }
