--- a/rockPaperScissor/styles.css
+++ b/rockPaperScissor/styles.css
@@ -24,14 +24,21 @@
   margin: 10px;
   color: var(--very-dark-blue);
   background-color: var(--golden-yellow);
-  background-image: linear-gradient(#fecc4c, #ffac33);
+  /* background-image: linear-gradient(#fecc4c, #ffac33); */
   border-color: var(--golden-yellow);
   border-width: 3px;
+  transition: background-color 1s ease;
+  
 }
 
+
+
 .btn:hover {
-  background-image: linear-gradient(#ffcc4c, #f89808);
+  background-color: #1995e7;
+  /* background-image: linear-gradient(#ffcc4c, #f89808); */
+  /* animation: buttonHover 0.5s ease;  Animation name, duration, timing function */
 }
+
 .rules-container {
     padding: 10px 0;
     margin: auto;
@@ -82,9 +89,19 @@
   #reset-game-btn {
     display: none;
     margin: 20px auto;
+    
   }
   
+
+  #reset-game-btn:hover {
+    
+    background-color: aquamarine;
+  }
   .expand{
           height:220px;
   }
-  
+  /* Animation definition
+@keyframes buttonHover {
+  from { background-color: var(--golden-yellow); }
+  to { background-color: #230202; }
+} */
