--- a/notesApp/styles.css
+++ b/notesApp/styles.css
@@ -13,12 +13,13 @@ body{
     background-color: #FDF2BB;
     background-color: #FDF2BB;
     width: 50%;
-    height: 502px;
+    height: 552px;
     margin: auto;
+    display: flex;
 }
 .content-box{
     background-color: #ffff;
-    width: 50%;
+    width: 40%;
     height: 66%;
     margin: auto
 }
@@ -38,10 +39,65 @@ p{
     padding-right: 88px;
     padding-top: 15px;
 }
-.header-icons{
-    font-size: 18px;
+button .btn-icon{
+    font-size: 15px;
+    color: #AD942F;
+    padding: 10px;
 }
-.btns{
-    font-size: 37px;
+ .btns button {
     border: none;
+    background: none;
+    }
+.btns{
+    display: flex;
+    align-items: center;
 }
+.arrow button {
+    position: absolute;
+    top: 105px;
+    border: 6px solid black;
+    background: black;
+    color: #ffff;
+    left: 573px;
+    padding: 0 3px;
+    
+}
+.arrow .arrow-back{
+    font-size: 17px;
+}
+.contents{
+    height: 221px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    /* width: 193px; */
+    margin-top: 37px;
+    padding: 0px 50px;
+    color: #AD942F;
+    font-size: 11px;
+    overflow: hidden;
+}
+.contents.checkbox{
+    border:1px solid #AD942F;
+}
+/* width */
+::-webkit-scrollbar {
+    width: 20px;
+  }
+  
+  /* Track */
+  ::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 5px grey; 
+    border-radius: 10px;
+  }
+   
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    background: red; 
+    border-radius: 10px;
+  }
+  
+  /* Handle on hover */
+  ::-webkit-scrollbar-thumb:hover {
+    background: #b30000; 
+  }
