--- a/notesApp/styles.css
+++ b/notesApp/styles.css
@@ -12,16 +12,20 @@ body{
 .container{
     background-color: #FDF2BB;
     background-color: #FDF2BB;
-    width: 50%;
+    width: 100%;
     height: 552px;
     margin: auto;
     display: flex;
+    max-width: 596px;
 }
 .content-box{
     background-color: #ffff;
     width: 40%;
-    height: 66%;
-    margin: auto
+    height: 64%;
+    margin: auto;
+    position: relative;
+    padding: 10px;
+    
 }
 header{
     display: flex;
@@ -54,11 +58,11 @@ button .btn-icon{
 }
 .arrow button {
     position: absolute;
-    top: 105px;
+    top: -9px;
     border: 6px solid black;
     background: black;
     color: #ffff;
-    left: 573px;
+    left: -24px;
     padding: 0 3px;
     
 }
@@ -66,7 +70,9 @@ button .btn-icon{
     font-size: 17px;
 }
 .contents{
-    height: 221px;
+    
+    max-height: 225px;
+    gap: 17px; 
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -75,29 +81,32 @@ button .btn-icon{
     padding: 0px 50px;
     color: #AD942F;
     font-size: 11px;
-    overflow: hidden;
+    overflow: auto;
+    
+    
 }
 .contents.checkbox{
     border:1px solid #AD942F;
 }
 /* width */
-::-webkit-scrollbar {
-    width: 20px;
-  }
-  
-  /* Track */
-  ::-webkit-scrollbar-track {
-    box-shadow: inset 0 0 5px grey; 
-    border-radius: 10px;
-  }
-   
-  /* Handle */
-  ::-webkit-scrollbar-thumb {
-    background: red; 
-    border-radius: 10px;
-  }
-  
-  /* Handle on hover */
-  ::-webkit-scrollbar-thumb:hover {
-    background: #b30000; 
-  }
+.contents::-webkit-scrollbar {
+    width: 5px;
+    background-color: #D9D9D9;
+}
+
+/* Track */
+.contents::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 3px #373737; 
+  border-radius: 5px;
+}
+ 
+/* Handle */
+.contents::-webkit-scrollbar-thumb {
+  background: black; 
+  border-radius: 5px;
+}
+
+/* Handle on hover */
+.contents::-webkit-scrollbar-thumb:hover {
+  background: grey; 
+}
