--- a/quizApp/styles.css
+++ b/quizApp/styles.css
@@ -6,61 +6,48 @@
     /* height: 100%; */
 }
 body{
-    font-family: "Lato", sans-serif;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
+  font-family: "Poppins", sans-serif;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  margin: 0;
+  background-color: #b8c6db;
+  background-image: linear-gradient(315deg, #b8c6db 0%, #f5f7fa 100%);
 }
 .quiz-container{
-    width: 450px;
-    /* color: white;  */
-    font-size: 110%;
-    margin: auto
+  background-color: #ffff;
+    box-shadow: 0 0 10px 2px rgba(100, 100, 100, 0.1);
+    width: 600px;
+    border-radius: 10px;
+    overflow: hidden;
 }
-.quiz-container h1{
+.quiz-header{
+  padding: 4rem;
+}
+h2{
+  padding: 1rem;
     text-align: center;
-    color: #cb2127;
-    margin-bottom: 10px;
-}
-.question{
-    background-color: #cb2127;
-    margin-bottom: 25px;
-    font-size: 115%;
-    padding-top: 20px;
-    padding-bottom: 20px;
-    position: relative;
-}
-/* to style arrow in a question box */
-    .question:after {
-        content: "";
-        position: absolute;
-        bottom: -15px;
-        left: 35px;
-        width: 0; 
-        height: 0; 
-        border-left: 15px solid transparent;
-        border-right: 15px solid transparent;
-         border-top: 15px solid #cb2127;
-      }
+    margin: 0;
 
-.box {
-    padding: 10px 15px;
-  }
-  .answers{
-    list-style-type: none;
-  }
-
-span {
-    background-color: #cb2127;
-    color: white;
+}
+ul{
+  list-style-type: none;
+    padding: 0;
+}
+ul li{
+  font-size: 24px;
+    margin: 1rem 0;
+}
+button{
+  background-color: #8e44ad;
+    width: 100%;
+    color: #fff;
+    border: none;
+    font-size: 17px;
+    font-family: inherit;
     display: block;
-    float: left;
-    margin-left: -15px;
-    margin-top: -10px;
-    margin-right: 0px;
-    padding: 10px 10px;
-    text-align: center;
-    
-    width: 40px;
-  }
-  
+    padding: 20px;
+    cursor: pointer;
+}
