new project stopwatch

--- a/wordFrequencyCounter/styles.css
+++ b/wordFrequencyCounter/styles.css
@@ -10,7 +10,7 @@ body{
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    idth: 100vw;
+    width: 100vw;
     height: 100vh;
     background: bisque;
 }
