--- a/sliderDesign/styles.css
+++ b/sliderDesign/styles.css
@@ -38,10 +38,13 @@ h4 {
     left: 100%;
     height: 100%;
     width: 100%;
+    transition: all 0.6s ease-in 0.6s;
 }
 
 .slide.active {
     transform: translateX(-100%);
+    
+    
 }
 
 .slide .info {
@@ -71,7 +74,7 @@ h4 {
 }
 .buttons-container {
     position: absolute;
-    
+
     bottom: 60px;
     right: 20px;
 }
