--- a/notesApp/styles.css
+++ b/notesApp/styles.css
@@ -5,108 +5,157 @@
     padding: 0;
 }
 body{
-    background-color: black;
     font-family: "Poppins", sans-serif;
-  
-}
-.container{
-    background-color: #FDF2BB;
-    background-color: #FDF2BB;
-    width: 100%;
-    height: 552px;
-    margin: auto;
-    display: flex;
-    max-width: 596px;
-}
-.content-box{
-    background-color: #ffff;
-    width: 40%;
-    height: 64%;
-    margin: auto;
-    position: relative;
-    padding: 10px;
-    
-}
-header{
-    display: flex;
-    justify-content: space-between;
-}
-h2{
-    color: #AD942F;
-    font-size: 14px;
-}
-p{
-    font-size: 9px;
-    font-weight: 300;
-}
-.heading-text{
-    padding-right: 88px;
-    padding-top: 15px;
-}
-button .btn-icon{
-    font-size: 15px;
-    color: #AD942F;
-    padding: 10px;
-}
- .btns button {
-    border: none;
-    background: none;
-    }
-.btns{
+    background-color: #8c53ff;
     display: flex;
     align-items: center;
+    justify-content: center;
+    height: 100vh;
 }
-.arrow button {
+.container{
+    background-color: #fff;
+    width: 821px;
+    height: 600px;
+    text-align: center;
+    align-items: center;
+    display: flex;
+    justify-content: center;
+    box-shadow: 0px 10px 15px 10px rgba(0, 0, 0, 0.3);
+    overflow: hidden;
+    overflow-y: scroll;
+    border-radius: 8px;
+}
+#list-header{
+    display: flex;
+    justify-content: left;
+    align-items: left;
+}
+.blankdiv{
+    width: 200px;
+    height: 200px;
+    background-color: #fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: none;
+    margin: 10px;
+    border-radius: 8px;
+    padding: 20px;
+}
+.addnotes{
+    background-color: #f9f9f9;
+    height: 200px;
+    width: 200px;
+    border: 1px solid #ddd;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    margin: 10px;
+     padding: 20px;
+    border-radius: 8px;
+}
+.addnotes:hover{
+    transition: 0.5s;
+    background-color: #f1f1f1;
+    }
+    .addnotes span{
+        font-size: 70px;
+        color: gainsboro;
+    }
+
+/* list css */
+#list-container{
+    display: flex;
+    align-items: left;
+    justify-content: left;
+}
+ul{
+    list-style-type: none;
+    display: flex;
+    flex-wrap: wrap;
+    text-align: center;
+
+}
+/* create note popup css */
+.popupcontainer{
     position: absolute;
-    top: -9px;
-    border: 6px solid black;
-    background: black;
-    color: #ffff;
-    left: -24px;
-    padding: 0 3px;
-    
-}
-.arrow .arrow-back{
-    font-size: 17px;
-}
-.contents{
-    
-    max-height: 225px;
-    gap: 17px; 
+    top: 50%;
+    left: 50%;
+    width: 400px;
+    height: 350px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     display: flex;
     flex-direction: column;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+    border-radius: 8px;
+    padding: 20px;
+    background-color: #fff;
+    border: 1px solid #ccc;
+    transform: translate(-50%, -50%);
+}
+.popupcontainer h1 {
+    font-weight: 900;
+    font-size: 20px;
+}
+.popupcontainer{
+    display: none;
+}
+textarea{
+    width:300px;
+    height: 200px;
+    margin: 10px 0;
+    padding: 15px;
+    border-radius: 4px;
+    border: 2px solid #8c56ff;
+}
+#btn-container{
+    display: flex;
+}
+.saveBtn , .cancelBtn {
+    width: 100px;
+    background-color: #8c53ff;
+    color: #fff;
+    border: none;
+    border-radius: 5px;
+    padding: 10px;
+    font-size: 14px;
+    margin: 10px;
+    cursor: pointer;
+}
+.cancelBtn{
+    background-color: gainsboro;
+}
+li{
+    background-color: #fff385;
+    margin: 5px 0;
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     justify-content: space-between;
-    /* width: 193px; */
-    margin-top: 37px;
-    padding: 0px 50px;
-    color: #AD942F;
-    font-size: 11px;
-    overflow: auto;
-    
-    
+    width: 200px;
+    height: 200px;
+    margin: 10px;
+    border-radius: 10px;
+    box-shadow: 9px 9px 18px #b3b3b3,-9px -9px 18px #ffff;
+
 }
-.contents.checkbox{
-    border:1px solid #AD942F;
+li{
+    display: none;
 }
-/* width */
-.contents::-webkit-scrollbar {
-    width: 5px;
-    background-color: #D9D9D9;
+#editBtn,
+#deleteBtn{
+    background-color: #c6aaff;
+    color: #fff;
+    border: none;
+    padding: 5px 10px;
+    margin: 0 5px;
+    cursor: pointer;
+    border-radius: 4px;
+    width: 60px;
+    font-size: 12px;
 }
 
-/* Track */
-.contents::-webkit-scrollbar-track {
-  box-shadow: inset 0 0 3px #373737; 
-  border-radius: 5px;
-}
- 
-/* Handle */
-.contents::-webkit-scrollbar-thumb {
-  background: black; 
-  border-radius: 5px;
-}
-
-/* Handle on hover */
-.contents::-webkit-scrollbar-thumb:hover {
-  background: grey; 
-}
