--- a/style.css
+++ b/style.css
@@ -1,9 +1,594 @@
-body{
-    background-color: rgb(143, 23, 208);
-    
+*, 
+*::before,
+*::after{
+  box-sizing: border-box;
 }
-a{
-    
-    font-size: 40px;
+
+/* custom proerties */
+
+:root{
+  --ff-primary: 'Source Sans Pro' , sans-serif;
+  --ff-secondary: 'Source Code Pro' , monospace;
+
+  --fw-reg: 300;
+  --fw-bold: 900;
+
+  --clr-light: #fff;
+  --clr-dark: #303030;
+  --clr-accent: #16e0bd;
+
+  --fs-h1: 3rem;
+  --fs-h2: 2.25rem;
+  --fs-h3: 1.25rem;
+  --fs-body: 1rem;
+
+  --bs: 0.25em 0.25em 0.75em rgba(0 , 0 , 0 , 0.25),
+        0.125em 0.125em 0.25em rgba(0 , 0 , 0 , 0.15);
+
+}
+/* General styles */
+
+html{
+    scroll-behavior: smooth;
+  }
+  
+  body{
+    background: var(--clr-light);
+    color: var(--clr-dark);
+    margin: 0;
+    font-family: var(--ff-primary);
+    font-size: var(--fs-body);
+    line-height: 1.6;
+  }
+  
+  section{
+    padding: 5em 2em;
+  }
+  img{
     display: block;
+    max-width: 100%;
+    height: 400px;
+  }
+  strong{
+    font-size: var(--fw-bold);
+  }
+  
+  :focus{
+    outline: 3px solid var(--clr-accent);
+    outline-offset: 3px;
+  }
+  
+  /* buttons */
+  
+  .btn{
+    display: inline-block;
+    padding: 0.5em 2.5em;
+    /* background-color: var(--clr-dark); */
+    text-decoration: none;
+    cursor: pointer;
+    font-size: .8rem;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    font-weight: var(--fw-bold);
+    transition: transform 200ms ease-in-out;
+    background-color: var(--clr-accent);
+    color: var(--clr-dark);
+  }
+  
+  .btn:hover{
+    transform: scale(1.1);
+  }
+  
+  /* Typography */
+  
+  h1,h2,h3{
+    line-height: 1;
+    margin: 0;
+  }
+  
+  h1{font-size: var(--fs-h1)}
+  h2{font-size: var(--fs-h2)}
+  h3{font-size: var(--fs-h3)}
+  
+  .section__title{
+   margin-bottom: 0.25em; 
+  /* margin: auto; */
+  }
+  
+  .section__subtitle{
+    margin: 0;
+    font-size: var(--fs-h3);
+  }
+  
+  .section__title--intro{
+    font-weight: var(--fw-reg);
+  }
+  
+  .section__title--intro strong{
+    display: block;
+  }
+  
+  .section__subtitle--intro,
+  .section__subtitle--about{
+    background-color: var(--clr-accent);
+    font-family: var(--ff-secondary);
+    margin-bottom: 1em;
+    padding: 0.25em 1em;
+  }
+  
+  .section__subtitle--work{
+    color: var(--clr-accent);
+    font-weight: var(--fw-bold);
+    margin-bottom: 2em;
+  }
+  
+  
+  /* scroll bar/ */
+  
+  
+  /* width */
+  ::-webkit-scrollbar {
+    width: 20px;
+  }
+  
+  /* Track */
+  ::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 5px grey;
+    border-radius: 10px;
+  }
+  
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    background: var(--clr-accent);
+    border-radius: 10px;
+  }
+  
+  /* header */
+  
+  header{
+    display: flex;
+    justify-content: space-between;
+    padding: 1em;
+  }
+  
+  nav{
+    position: fixed;
+    background: var(--clr-dark);
+    color: var(--clr-light);
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    z-index: 100;
+    transform: translateX(100%);
+    transition: all 250ms cubic-bezier(0.5 , 0 , 0.5 , 1);
+  }
+  
+  
+  .nav__list{
+    list-style: none;
+    display: flex;
+    height: 100%;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    margin: 0;
+    padding: 0;
+  }
+  
+  .nav__link{
+    color: inherit;
+    font-weight: var(--fw-bold);
+    font-size: var(--fs-h2);
+    text-decoration: none;
+  }
+  
+  .nav__link:hover{
+    color: var(--clr-accent);
+  }
+  
+  .nav-toggle{
+    padding: 0.5em;
+    background: transparent;
+    border: 0;
+    cursor: pointer;
+    position: absolute;
+    right: 1em;
+    top: 1em;
+    z-index: 1000;
+  }
+  
+  .nav-open nav{
+    transform: translateX(0);
+  }
+  
+  .nav-open .nav-toggle{
+    position: fixed;
+  }
+  
+  .nav-open .hamburger{
+    transform: rotate(0.625turn);
+  }
+  
+  .nav-open .hamburger::before{
+    transform: rotate(90deg) translateX(-6px);
+  }
+  
+  .nav-open .hamburger::after{
+    /* opacity: 0; */
+    display: none;
+  }
+  
+  .hamburger{
+    display: block;
+    position: relative; 
+  }
+  .hamburger,
+  .hamburger::before,
+  .hamburger::after{
+    background: var(--clr-accent);
+    width: 2em;
+    height: 3px;
+    border-radius: 1em;
+    transition: transform 250ms ease-in-out;
+  }
+  
+  .hamburger::before,
+  .hamburger::after{
+    content: '';
+    position: absolute;
+    left: 0;
+    right: 0;
+  }
+  
+  .hamburger::before{
+    top: 6px;
+  }
+  
+  .hamburger::after{
+    bottom: 6px;
+  }
+  
+  .logo{
+    max-width: 100px;
+  }
+  
+  /* intro */
+  
+  .intro{
+    position: relative;
+  }
+  
+  .intro__img{
+    box-shadow: var(--bs);
+  }
+  
+  .section__subtitle--intro{
+    display: inline-block;
+  }
+  
+  
+  @media (min-width: 600px){
+    .intro{
+      grid-column-gap: 1em;
+      width: min-content;
+      margin: 0 auto;
+      display: grid;
+      grid-template-areas: "img title" "img subtitle";
+      grid-template-columns: min-content max-content;
+    }
+  
+    .intro__img{
+      grid-area: img;
+      min-width: 250px;
+      position: relative;
+      z-index: 2;
+    }
+  
+    .section__subtitle--intro{
+      align-self: start;
+        grid-column: -1 / 1;
+        grid-row: 2;
+        text-align: right;
+        position: relative;
+        left: -2.5em;
+        width: calc(100% + 1.5em);
+        top: 82px;
+    }
+  }
+  
+  
+  /* my services section */
+  
+  .my-services{
+    background-color: var(--clr-dark);
+    color: var(--clr-light);
+    color: var(--cle-light);
+    background-image: url(https://yassmittal.github.io/exercises/personalPortfolio/Images/christopher-gower-m_HRfLhgABo-unsplash@2x.png);
+    background-size: cover;
+    text-align: center;
+    color: var(--clr-light)
+    /* background-blend-mode: multiply; */
+  }
+  
+  .section__title--services{
+    color: var(--clr-accent);
+    position: relative;
+  }
+  
+  .section__title--services::after{
+    content: '';
+    display: block;
+    width: 2em;
+    height: 1px;
+    margin: 0.5em auto 1em;
+    background: var(--clr-light);
+    opacity: 0.25;
+  }
+  
+  .services{
+    margin-bottom: 4em;
+  }
+  
+  .service{
+    max-width: 500px;
+    margin: 0 auto;
+  }
+  
+  @media (min-width: 800px) {
+    .services{
+      display: flex;
+      max-width: 1000px;
+      margin-left: auto;
+      margin-right: auto;
+    }
+  
+    .service + .service{
+      margin-left: 2em;
+    }
+  }
+  
+  .about-me{
+    max-width: 1000px;
+    margin: 0 auto;
+  }
+  
+  @media (min-width : 600px){
+    .about-me{
+      display: grid;
+      grid-template-columns: 1fr 415px;
+      grid-template-areas: "title img"
+                            "subtitle img"
+                            "text img";
+                            
+      grid-column-gap: 4em;
+    }
+  
+    .about-me__img{
+      box-shadow: var(--bs);
+    }
+  
+    /* .section__subtitle--about , 
+    .section__title--about{
+      grid-column: 1;
+    } */
+  
+    .section__title--about{
+      grid-area: title;
+    }
+  
+    .section__subtitle--about{
+      /* grid-column: 1 / -1; */ 
+        grid-row: 2;
+        position: relative;
+        left: -2em;
+        width: calc(100% + 2em);
+        padding-left: 1em;
+        padding-right: calc(200px + 4em);
+        /* z-index: -2; */
+        top: -254px;
+    }
+  
+    .about-me__img{
+    grid-area: img;
+    position: relative;
+    z-index: 2;
+    height: 320px;
+    object-fit: cover;
+    }
+  }
+  .about-me h2{
+    margin-bottom: 0.25em;
+  }
+  /* .about-me__body p {
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    width: 500px;
+  } */
+   
+  
+  
+  
+  /* my work */
+
+.my-work{
+  background-color: var(--clr-dark);
+  color: var(--clr-light);
+  text-align: center;
+}
+
+.portfolio{
+  /* display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px , 1fr)); */
+  display: flex;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 2rem;
+}
+
+.portfolio__item{
+  background: var(--clr-accent);
+  overflow: hidden;
+}
+
+.portfolio__img{
+  transition:
+              transform 750ms cubic-bezier(0.5 ,0 , 0.5 , 1),
+              opacity 250ms linear;
+}
+
+.portfolio__item:focus{
+  position: relative;
+  z-index: 2;
+}
+
+.portfolio__img:hover,
+ .portfolio__item:focus .portfolio__img{
+  transform: scale(1.2);
+  opacity: 0.5;
+}
+.my-work h2{
+  margin-bottom: 0.30em;
+}
+.image img {
+  width: 100%;
+  height: 200px;
+  object-fit: cover;
+  object-position: center;
+  cursor: pointer;
+}
+.portfolio div:hover img{
+  opacity: 0.6;
+}
+.portfolio > div {
+  position: relative;
+  width: 330px;
+  height: 260px;
+  overflow: hidden;
+  background-color: var(--clr-accent);
+  border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.image {
+  transition: all 300ms ease;
+  width: 100%;
+  height: 150px;
+  overflow: hidden;
+}
+.portfolio > div > .about-project {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  position: absolute;
+  bottom: 0px;
+  color: #000;
+  width: 90%;
+  line-height: 18px;
+  margin: 0.4em 0;
+  transition: opacity 150ms linear;
+}
+.details {
+  visibility: hidden;
+  position: absolute;
+  color: white;
+  background-color: rgba(48, 48, 48, 0.6);
+  height: 19.5%;
+  width: 100%;
+  padding: 12px;
+  font-size: 14px;
+  bottom: 0;
+  transform: translate(0, 100%);
+  transition: all 300ms ease;
+}
+.portfolio div:hover .details{
+  visibility: visible;
+  transform: translate(0%);
+}
+
+.portfolio div:hover .image{
+  scale: 1.8;
+}
+
+.portfolio div:hover .about-project{
+  opacity: 0;
+}
+
+.all-projects-button{
+  padding: 1em;
+  margin: 2em auto;
+  background-color: var(--clr-accent);
+  font-weight: bold;
+  border: none;
+  border-radius: 2px;
+  box-shadow: 5px 4px 2px rgba(0 , 0 , 0 , 1);
+  transition: transform 50ms linear;
+  cursor: pointer;
+}
+
+.all-projects-button:active{
+  transform: translate(5px , 4px);
+  box-shadow: none;
+}
+
+@media (max-width:1000px) {
+
+  .portfolio{
+    gap: 100px;
+  }
+
+}
+/* footer */
+
+.footer{
+  background-color: #111;
+  color: var(--clr-accent);
+  text-align: center;
+  padding: 2.5em 0;
+  font-size: var(--fs-h3);
+  display: flex;
+  width: 100vw;
+  height: 50vh;
+  justify-content: center;
+  font-size: xx-large;
+  text-align: center;
+  align-items: flex-start;
+}
+
+.footer a {
+  color: inherit;
+  text-decoration: none;
+
+}
+
+.footer__link{
+  font-weight: var(--fw-bold);
+}
+
+.footer__link:hover,
+.social-list__link:hover{
+  opacity: 0.7;
+}
+
+
+.footer__link:hover{
+  text-decoration: underline;
+}
+
+.social-list{
+  list-style: none;
+  display: flex;
+  justify-content: center;
+  margin: 2em 0 0;
+  padding: 0;
+}
+
+.social-list__item{
+  margin: 0 0.5em;
+}
+
+.social-list__link{
+  padding: 0.5em;
 }
