made new project emoji maker

--- a/notesApp/styles.css
+++ b/notesApp/styles.css
@@ -142,6 +142,7 @@ li{
     margin: 10px;
     border-radius: 10px;
     box-shadow: 9px 9px 18px #b3b3b3,-9px -9px 18px #ffff;
+    overflow: auto;
 
 }
 /* li{
