--- a/emojiMaker/styles.css
+++ b/emojiMaker/styles.css
@@ -27,9 +27,10 @@ body{
     top: 0;
     display: flex;
     align-items: center;
-    border: 1px solid black;
+    /* border: 1px solid black; */
     justify-content: space-around;
     padding: 0 1em;
+    margin-top: 15px;
 }
 
 .buttons-container button{
@@ -85,4 +86,12 @@ button:hover{
     background-color: #9b450f;
     /* box-shadow: 0 5px #666; */
     transform: translateY(4px);
+  }
+  h1{
+    font-family: "Poppins", sans-serif;
+    font-size: 18px;
+    text-align: center;
+    padding: 13px;
+    letter-spacing: 2px;
+    color: crimson;
   }
