--- a/musicPlayer/styles.css
+++ b/musicPlayer/styles.css
@@ -149,11 +149,16 @@ body{
     letter-spacing: 2px;
     border: 1px solid #ddd;
     border-radius: 6px;
+    text-shadow: 1px 1px 2px black, 0 0 25px blue, 0 0 5px darkblue;
   }
 
-  .songs-list li:active{
+  /* .songs-list li:active{
     background-color: #fe8daa;
-  }
+   
+  } */
+   li {
+    padding: 5px 0;
+   }
   
   .song-list li {
     margin-bottom: 5px;
@@ -167,4 +172,10 @@ body{
   .songs-list .active{
     color: red;
     font-weight: bolder;
+    font-size: 20px;
+    transition: all 0.3s ease-in-out;
+  }
+  .songs-list:hover{
+    /* background-color: #c88596; */
+    box-shadow: 10px 10px 5px  #c88596;
   }
