--- a/style2.css
+++ b/style2.css
@@ -4,13 +4,13 @@
     margin: 0;
     padding: 0;
 }
-#about {
+#home {
     
   font-family: "Montserrat", sans-serif;
     max-width: 1200px;
-    padding: 10rem 0;
+    padding: 1rem 0px 32px 0;
 }
-#about .about{
+#home .about{
     display: flex;
     justify-content: flex-start;
     align-items: flex-start;
@@ -78,15 +78,13 @@
   }
 
   /* projects section */
-  #projects{
-    max-width: 1200;
-    padding: 1rem 0;
-  }
+  
   .projects .projects-header{
     text-transform: uppercase;
     text-align: center;
     font-weight: 300;
     font-size: 3rem;
+    margin-top: 18px;
   }
   .projects-item-container{
     display: flex;
@@ -96,11 +94,11 @@
     padding-top: 2rem;
   }
   .project-item {
-    width: 25%;
+    width: 23%;
     background-color: #fff;
     box-shadow: 2px 3px 5px rgba(0, 0, 0, 0.4);
     height: 300px;
-    margin: 1rem;
+    margin: 34px;
     font-weight: bold;
     border-radius: 10px 10px 0 0;
     position: relative;
@@ -212,7 +210,8 @@
     font-size: 30px;
     color:black;
     background-color: #a2d2ff;
-   
+    padding-bottom: 60px;
+   padding-top: 32px;
    
   }
   .key-projects-body strong{
@@ -226,6 +225,7 @@
     flex-direction: row;
     align-items: center;
     justify-content: space-evenly;
+
   }
   .projects-header strong{
     color: crimson;
