--- a/bookFinder/styles.css
+++ b/bookFinder/styles.css
@@ -40,9 +40,9 @@ section{
     padding: 5px;
     color:rgba(0, 0, 0, .5);
 }
-.content{
+.content-container{
     display: flex;
-    flex-direction: column;
+    /* flex-direction: row; */
     align-items: center;
     /* margin: 60px 0; */
     padding-top: 3rem;
@@ -262,6 +262,13 @@ section{
 
 }
 /* search html */
+.search-content{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    /* margin: 60px 0; */
+    padding-top: 3rem;
+}
 .search-main-container{
     max-width: 90%;
     margin: auto;
@@ -385,4 +392,12 @@ button a {
   .book-description {
     font-size: 0.8rem; /* Adjust font size for content */
     margin-bottom: 0.25rem; /* Space between text elements */
+  }
+  .book-category {
+    padding: 5px;
+    color: crimson;
+  }
+  .book-lang{
+    padding: 5px;
+    color: crimson;
   }
