made new changes in navigation

--- a/bookFinder/styles.css
+++ b/bookFinder/styles.css
@@ -10,6 +10,11 @@ body{
     font-size: .9em;
     background-color: #eff2f1;
 }
+body:hover{
+    scroll-behavior: smooth;
+    
+
+}
 section{
     margin-bottom: 4rem;
 }
@@ -400,4 +405,8 @@ button a {
   .book-lang{
     padding: 5px;
     color: crimson;
+  }
+  a {
+    text-decoration: none;
+    color:inherit;
   }
