--- a/style.css
+++ b/style.css
@@ -32,7 +32,10 @@ html{
     scroll-behavior: smooth;
   }
   body::-webkit-scrollbar {
-    display: none;
+    scrollbar-width: 3px;
+    scrollbar-track-color: crimson;
+    overflow-y: scroll;
+
 
   }
   
