--- a/style2.css
+++ b/style2.css
@@ -140,7 +140,8 @@
     box-shadow: inset 2px 2px 2px 0px rgba(255, 255, 255, 0.5),
     7px 7px 20px 0px rgba(0, 0, 0, 0.1), 4px 4px 5px 0px rgba(0, 0, 0, 0.1);
     outline: none;
-    background-image: linear-gradient(to top, #09203f 0%, #537895 100%);
+    /* background-image: linear-gradient(to top, #09203f 0%, #537895 100%); */
+    background-color: #c9596f;
     border: none;
     overflow: hidden;
     font-family: "league-gothic-italic", "Lato", sans serif;
