--- a/style2.css
+++ b/style2.css
@@ -211,9 +211,10 @@
     text-align: center;
     font-size: 30px;
     color:black;
-    background-color: #a2d2ff;
-    padding-bottom: 60px;
+    background-color: #F1EFE9;
+  padding-bottom: 60px;
    padding-top: 32px;
+
    
   }
   .key-projects-body strong{
