--- a/randomMealGenerator/styles.css
+++ b/randomMealGenerator/styles.css
@@ -9,7 +9,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    min-height: 100vh;
+    /* min-height: 100vh; */
 }
 p{
     margin-bottom: 21px;
@@ -27,4 +27,26 @@ button{
 }
 h1{
     font-weight: 500;
+}
+ .rows{
+    display: flex;
+    flex-direction: row; 
+    max-width: 70%;
+    margin: auto;
+ }
+ .columns img{
+    width: 432px;
+    height: 432px;
+    /* margin-left: 30px; */
+    margin-right: 24px;
+ }
+
+ .video-wrapper {
+	position: relative;
+	padding-bottom: 56.25%;
+	padding-top: 25px;
+	height: 0;
+}
+.meal{
+    margin-top: 50px;
 }
