--- a/randomMealGenerator/styles.css
+++ b/randomMealGenerator/styles.css
@@ -37,16 +37,49 @@ h1{
  .columns img{
     width: 432px;
     height: 432px;
+    
     /* margin-left: 30px; */
     margin-right: 24px;
  }
 
  .video-wrapper {
+    max-width: 70%;
 	position: relative;
 	padding-bottom: 56.25%;
 	padding-top: 25px;
 	height: 0;
+    width: 100%;
+    height: 100%;
+    margin: auto;
 }
 .meal{
     margin-top: 50px;
+}
+.columns h4{
+    font-size: 3rem;
+    font-weight: 100;
+}
+.columns p {
+    font-size: 1rem;
+    font-weight: 200;
+}
+
+.vid{
+    position: absolute;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-image: url();
+
+}
+.columns li{
+    list-style-type: circle;
+}
+.ingre-title{
+    font-size: 35px;
+    font-weight: 200;
+    margin-left: -13px;
+    margin-bottom: 11px;
 }
