--- a/style.css
+++ b/style.css
@@ -16,6 +16,8 @@
   --clr-light: #fff;
   --clr-dark: #303030;
   --clr-accent: #16e0bd;
+  
+  
 
   --fs-h1: 3rem;
   --fs-h2: 2.25rem;
@@ -24,8 +26,16 @@
 
   --bs: 0.25em 0.25em 0.75em rgba(0 , 0 , 0 , 0.25),
         0.125em 0.125em 0.25em rgba(0 , 0 , 0 , 0.15);
-
 }
+.dark-theme{
+          --clr-light:#212121;
+          --clr-dark:#fff;
+
+       }
+/* --primary-color:#edf2fc;
+--secondary-color:#212121; */
+
+
 /* General styles */
 
 html{
@@ -80,7 +90,7 @@ html{
   }
   
   .white-div{
-    background: #fff;
+    background:var(--clr-light);
     border-radius: 61px;
     /* width: 95%; */
     /* height: 51%; */
